Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* match the other PM's for econf; update ${WORKDIR} instances of
  config.{sub,guess} from /usr/share/gnuconfig.

* added protection against bad environment dumps from other PMs for T
  during env restoration.

* removed RESTRICT=autoconfig support.

* fix compatibility regression introduced in file-5.05 involving MAGIC_NONE.

* handle keyboard interrupts better during compilation; no longer display
  die tracebacks if the user intentionally stopped the compilation.

* duplicate a portage workaround for emacs ebuild; specifically don't
  regenerate infodir if the ebuild placed a .keepinfodir in the directory.
  gentoo bug #257260.

* add workaround to disable unzip during unpack going interactive during
  a failure; gentoo bug #336285.

* fixed traceback during displaying a summary for 'pinspect eapi_usage'

* add EAPI limitation to all portageq invocations, and support USE dep
  usage with has_version and friends.

* handle portage's new interpretation of the sync retries variable for portage
  configuration.

* pinspect distfiles_usage was added; this is primarily useful for getting
  a repository level view of what the distfiles requirements are, what takes
  what percentile of unique space, etc.

* FEATURES=allow-missing-manifests ; does exactly as it sounds, not advised to
  use unless you know what you're doing.

* ospkg's fork of pkgcore has been folded in; FEATURES=save-deb is the primary
  addition.

* extended atom syntax now allows '*' to be used w/in a string- for example
  dev-*kde, *dev-*k*de*, etc.  This syntax is usable in user configs, and
  from the commandline.

* new FEATURES=fixlafiles is on by default; basically folds
  dev-util/lafilefixer functionality directly into the merger.
  Note this version drops comments- it's about a 66% reduction in .la system
  filespace requirements via doing so.
